--- a/TestAppUI/src/app/app.component.html
+++ b/TestAppUI/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/fruits">Fruits</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
