--- a/TestAppUI/src/app/hero-detail/hero-detail.component.html
+++ b/TestAppUI/src/app/hero-detail/hero-detail.component.html
@@ -10,5 +10,5 @@
     <input id="hero-power" [(ngModel)]="hero.power" placeholder="Power"/>
   </div>
   <button type="button" (click)="goBack()">go back</button>
-  <button type="button" (click)="save()">save</button>
+  <button type="button" (click)="save(this.hero)">save</button>
 </div>
